# zendesk-cli

./: LICENSE  Makefile  README.md  pyproject.toml
src/zendesk_cli/cmd/: codes.py  help_center_articles.py  writers.py  zendesk.py
src/zendesk_cli/internal/help_center/: api.py  models.py  options.py
tests/: test_zendesk.py
